--- a/deletecmk.yaml
+++ b/deletecmk.yaml
@@ -4,7 +4,7 @@
   become: true
   tasks:
     -
-      name: "1. delete cortex-agent"
+      name: delete cortex-agent
       file:
           path: /home/azureuser/check-mk-agent_2.1.0p25-1_all.deb
           state: absent
