--- a/uninstallxdrsap.yaml
+++ b/uninstallxdrsap.yaml
@@ -4,7 +4,7 @@
   tasks:
     -
       name: Uninstall cortex-agent
-      zyper:
+      zypper:
         name: cortex-agent
         autoremove: yes
         state: absent
