--- a/cobadelete.yml
+++ b/cobadelete.yml
@@ -4,5 +4,6 @@
   become: true
   tasks:
     -
-      name: install s1
-      command: rm -rf testfile.txt 
+      name: Delete file txt
+      command: rm -rf testfile.txt
+      channged_when: false
