--- a/cobadelete.yml
+++ b/cobadelete.yml
@@ -2,7 +2,4 @@
   hosts: ubuntuazuser
   tasks:
   	- name: Remove a file in the home directory
-      shell: rm $HOME/testfile.txt
-      args:
-      	removes: "$HOME/testfile.txt"
-        warn: false
+      shell: rm /home/azmovicuser/testfile.txt
