--- a/cobadelete.yml
+++ b/cobadelete.yml
@@ -1,6 +1,6 @@
--
+---
+- name: Running a command
   hosts: ubuntuazuser
   tasks:
-    -
-      name: git clone
-      shell: git clone https://github.com/riqimaruq/playbook.git
+    - name: Run ls command
+      shell: ls
